# eRob_IGH_EtherCAT

./: .gitignore  CMakeLists.txt  CMakeLists_test.txt  MOTOR_CONTROL_SYSTEM.md
src/: arm_demo.cpp  motor_controller.cpp  motor_controller.h  test_api.cpp  three_axis_arm.cpp  three_axis_arm.h
